Mejorados muchos textos de twigs.

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/rune.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar tus escasas <span class="label label-rune">Runas</span> en comprar los artículos que prefieras de la tienda.</div>
+                            <div class="col-xs-12">Aquí puedes gastar tus valiosas <span class="label label-rune">Runas</span> en comprar los artículos que prefieras de la tienda. Si quieres, puedes comprar más runas.</div>
                         </div>
                     </div>
                 </div>
