--- a/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
@@ -26,7 +26,7 @@
                         </div>
                         {% if loop.first %}
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes destruir, sin costes de <span class="label label-extra">Turnos</span> ni de <span class="label label-extra">Recursos</span>, tus edificaciones para recuperar <span class="label label-extra">Tierras</span> libres y reutilizarlas para construir nuevos edificios.</div>
+                            <div class="col-xs-12">Aquí puedes destruir gratuitamente tus edificaciones para recuperar tierras libres y reutilizarlas en construir nuevos edificios.</div>
                         </div>
                         {% else %}
                         <div class="col-xs-8 text-padded">
