--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -287,7 +287,7 @@ body {
     border-color: #000;
 }
 .panel-quest > .panel-heading, .panel-quest > .panel-footer, .label-quest, .alert-quest {
-    background-color: darkgoldenrod;
+    background-color: #e6af21;
     border-color: #000;
 }
 .panel-rune > .panel-heading, .panel-rune > .panel-footer, .label-rune {
