Nueva forma de ganar el juego, ira de los dioses.

--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -70,7 +70,7 @@
                         <p>PROB<sub>éxito</sub> = MIN (75, DEFENSA FÍSICA<sub>jugador</sub>)</p>
                     </div>
                     <div class="panel-footer text-center">
-                        <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i>Atacar</button>
+                        <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-flag"></i>Atacar</button>
                     </div>
                 </div>
             </div>
