--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -93,6 +93,7 @@
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Héroes</span>.</li>
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Encantamientos</span>.</li>
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Hechizos</span>.</li>
+                        <li>Se ha añadido una segunda condición de victoria, la <span class="label label-extra">Ira de los Dioses</span> consulta la ayuda para entender cómo funciona.</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta cerrada</div>
