--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -29,7 +29,7 @@
                     <p>PROB<sub>éxito</sub> = MIN (75, DEFENSA MÁGICA<sub>jugador</sub>)</p>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="{{ path( 'archmage_game_kingdom_auction' ) }}"><i class="fa fa-fw fa-money"></i>Subasta</a>
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_kingdom_auction' ) }}"><i class="fa fa-fw fa-legal"></i>Subasta</a>
                 </div>
             </div>
         </div>
