--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -13,7 +13,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-bank"></i>Reino</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-bank"></i>Economía</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
