--- a/src/Archmage/GameBundle/Resources/views/resources.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/resources.html.twig
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="resources">
     <div class="col-xs-12">
         <p class="resources">
             <span class="label label-extra" data-toggle="tooltip" data-placement="bottom" title="Turnos que tienes/Turnos máximos acumulables. Normalmente ganas 1 Turno cada 3 minutos, pero puedes conseguir más activando Artefactos"><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nff }}/300</span>
