--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -93,21 +93,379 @@
             'bower/bootstrap/dist/js/bootstrap.js'
             'bower/bootstrap-select/dist/js/bootstrap-select.js'
             'bower/bootstrap-validator/js/validator.js'
-
+            'bower/bootstrap-tour/build/js/bootstrap-tour.js'
         %}
         <script src="{{ asset_url }}"></script>
         <script>
             $(document).ready(function() {
+                /* RESPONSIVE SELECTBOX */
                 if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
                     $('.selectpicker').selectpicker('mobile');
                 } else {
-                    $('.selectpicker').selectpicker({
-                    });
+                    $('.selectpicker').selectpicker();
                 }
+                /* INITIALIZE ALL TOOLTIPS ON THE SITE */
                 $(function () {
                     $('[data-toggle="tooltip"]').tooltip()
                 })
             });
+        </script>
+        <script>
+            var tour = new Tour({
+                template: "<div class='popover tour'><div class='arrow'></div><h3 class='popover-title text-center'></h3><div class='popover-content'></div><div class='popover-footer text-center' style='width:100%;'><div class='popover-navigation btn-group' role='group'><button class='btn btn-sm btn-default' data-role='prev'><i class='fa fa-fw fa-arrow-left'></i></button><button class='btn btn-sm btn-default' data-role='next'><i class='fa fa-fw fa-arrow-right'></i></button><button class='btn btn-sm btn-default' data-role='end'><i class='fa fa-fw fa-times'></i></button></div></div>",
+                steps: [
+                    {
+                        element: "#summary-economy",
+                        title: "a",
+                        content: "a",
+                        placement: "top"
+                    }, {
+                        element: "#summary-magic",
+                        title: "a",
+                        content: "a",
+                        placement: "top"
+                    }, {
+                        element: "#summary-territory",
+                        title: "a",
+                        content: "a",
+                        placement: "top"
+                    }, {
+                        element: "#summary-temple",
+                        title: "a",
+                        content: "a",
+                        placement: "top"
+                    }, {
+                        element: "#summary-army",
+                        title: "a",
+                        content: "a",
+                        placement: "top"
+                    }, {
+                        element: "#summary-tavern",
+                        title: "a",
+                        content: "a",
+                        placement: "top"
+                    }, {
+                        element: "#summary-defense",
+                        title: "a",
+                        content: "a",
+                        placement: "top"
+                    }, {
+                        element: "#summary-social",
+                        title: "a",
+                        content: "a",
+                        placement: "top"
+                    }, {
+                        element: "#summary-balance",
+                        title: "a",
+                        content: "a",
+                        placement: "top"
+                    }, {
+                        element: "#kingdom-tax",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#tax-formula",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#kingdom-auction",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#auction-formula",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#auction-item",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#auction-recipe",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#auction-troop",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#auction-quest",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#auction-contract",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#auction-research",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#kingdom-temple",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#temple-gods",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#kingdom-market",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#market-runa-de-telegram",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#market-runa-de-oro",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#market-runa-de-poblacion",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#market-runa-de-mana",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#market-runa-de-tierras",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#market-runa-de-artefactos",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#market-runa-de-mapas",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#market-runa-de-recetas",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#territory-explore",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#explore-formula",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#build-tierras",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#build-granjas",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#build-pueblos",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#build-nodos",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#build-gremios",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#build-talleres",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#build-barracones",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#build-barreras",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#build-fortalezas",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#territory-demolish",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#magic-meditate",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#meditate-formula",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#magic-research",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#research-formula",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#research-spell",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#magic-conjure",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#conjure-formula",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#conjure-research",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#magic-dispell",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#dispell-formula",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#dispell-enchantment",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#magic-artifact",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#artifact-formula",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#artifact-artifact",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#magic-alchemy",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#alchemy-formula",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#alchemy-recipe",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#army-attack",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#attack-options",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#attack-formula",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#attack-troop",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#attack-contract",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#army-disband",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#disband-troop",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#army-quest",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#quest-quest",
+                        title: "Impuestos",
+                        content: "BLABLABLA",
+                        placement: "top"
+                    }, {
+                        element: "#navbar-account",
+                        title: "a",
+                        content: "a",
+                        placement: "bottom"
+                    }
+                ],
+                duration: 1000,
+                storage: false
+            });
+            tour.init();
+            tour.start();
         </script>
         {% endjavascripts %}
     {% endblock %}
