--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -14,7 +14,7 @@
     </div>
     <div class="jumbotron text-center">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12" id="profile">
                 <div class="box-icon alert alert-{{ profile.faction.class }}">
                     <i class="fa fa-fw fa-4x fa-user"></i>
                 </div>
