--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -12,7 +12,7 @@
             </div>
         </div>
         <form id="attack" name="attack" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_attack') }}" method="post" role="form">
-            <div class="col-xs-12 col-md-6 col-md-offset-3">
+            <div class="col-xs-12 col-md-6 col-md-offset-3" id="army-attack">
                 <div class="panel panel-default">
                     <div class="panel-heading text-center">Atacar</div>
                     <div class="panel-body text-responsive">
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-middle text-center">Detalles</div>
+                    <div class="panel-middle text-center" id="attack-options">Detalles</div>
                     <div class="panel-body text-center">
                         <div class="row">
                             <div class="col-xs-12">
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-middle text-center">Fórmula</div>
+                    <div class="panel-middle text-center" id="attack-formula">Fórmula</div>
                     <div class="panel-body text-responsive text-only text-center">
                         <p>PROB<sub>éxito</sub> = MIN (75, DEFENSA FÍSICA<sub>jugador</sub>)</p>
                     </div>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             {% for troop in player.troops if troop.quantity > 0 %}
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6" id="attack-troop">
                 <div class="panel panel-{{ troop.unit.faction.class }}">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Cantidad de unidades de la tropa">[{{ troop.quantity|nf }}]</span></div>
                     <div class="panel-body text-responsive">
@@ -116,12 +116,12 @@
             {% else %}
             <div class="container">
                 <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
-                    <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes tropas en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_magic_conjure') }}">Invocar</a> alguna.
+                    <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes <span class="label label-extra">Tropas</span> en tu ejército. Tal vez deberías <i class="fa fa-fw fa-user-plus"></i><a href="{{ path('archmage_game_magic_conjure') }}">Invocar</a> alguna.
                 </div>
             </div>
             {% endfor %}
             {% for contract in player.contracts %}
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6" id="attack-contract">
                 <div class="panel panel-{{ contract.hero.faction.class }}">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Nivel del Héroe"><i class="fa fa-fw fa-star"></i>{{ contract.level }}</span></div>
                     <div class="panel-body text-responsive">
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                     <div class="panel-footer text-center text-responsive">
-                        <span class="btn btn-default"><i class="fa fa-fw fa-flag"></i>A la batalla</span>
+                        <button class="btn btn-default" disabled><i class="fa fa-fw fa-flag"></i>Siempre va la batalla</button>
                     </div>
                 </div>
             </div>
