--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <div class="col-xs-12 col-md-6 col-md-offset-3" id="army-disband">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Mantenimientos</div>
                 <div class="panel-body text-responsive">
@@ -25,12 +25,12 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_attack' ) }}"><i class="fa fa-fw fa-user-plus"></i>Atacar</a>
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_attack' ) }}"><i class="fa fa-fw fa-flag"></i>Atacar</a>
                 </div>
             </div>
         </div>
         {% for troop in player.troops %}
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6" id="disband-troop">
             <div class="panel panel-{{ troop.unit.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Cantidad de tropas que posees">[{{ troop.quantity|nf }}]</span></div>
                 <div class="panel-body text-responsive">
@@ -91,9 +91,9 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Oro al turno por nivel">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Personas al turno por nivel">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Maná al turno por nivel">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimento de Oro al turno por nivel">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimento de Personas al turno por nivel">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimento de Maná al turno por nivel">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</span></div>
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ contract.hero.skill.description|raw }}</div>
                             {# row #}
