--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <div class="col-xs-12 col-md-6 col-md-offset-3" id="kingdom-market">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Runas</div>
                 <div class="panel-body text-responsive">
@@ -30,7 +30,7 @@
             </div>
         </div>
         {% for rune in runes %}
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6" id="market-{{ rune.name|slug }}">
             <div class="panel panel-rune">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-ils"></i><a href="{{ path('archmage_game_home_help') }}#{{ rune.name|slug }}" class="link">{{ rune.name }}</a></div>
                 <div class="panel-body text-responsive">
