--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -10,38 +10,36 @@
                 <h1><i class="fa fa-fw fa-money"></i>Recaudar oro</h1>
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
-            <div class="row">
-                <div class="col-xs-12 col-md-offset-3 col-md-6">
-                    <div class="panel panel-default">
-                        <div class="panel-heading text-center">{{ (player.goldResourcePerTurn * 2)|nf }} Oro/Turno</div>
-                        <div class="panel-body text-responsive">
-                            <div class="row">
-                                <div class="col-xs-4">
-                                    <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
-                                </div>
-                                <div class="col-xs-8 text-padded">
-                                    <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> en aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de <span class="label label-extra">Oro</span> rápidamente.</div>
-                                </div>
+            <div class="col-xs-12 col-md-offset-3 col-md-6" id="kingdom-tax">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">{{ (player.goldResourcePerTurn * 2)|nf }} Oro/Turno</div>
+                    <div class="panel-body text-responsive">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/economy.jpg') }}">
+                            </div>
+                            <div class="col-xs-8 text-padded">
+                                <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> en aplicar impuestos desorbitados a tus leales súbditos para obtener grandes cantidades de <span class="label label-extra">Oro</span> rápidamente.</div>
                             </div>
                         </div>
-                        <div class="panel-middle text-center">Fórmula</div>
-                        <div class="panel-body text-responsive text-center text-only">
-                            <p>ORO<sub>recaudado</sub> = GRANJAS<sub>jugador</sub> * ORO<sub>granja</sub> * 2</p>
-                        </div>
-                        <div class="panel-footer text-center">
-                            <form id="tax" name="tax" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_tax') }}" method="post" role="form">
-                                <div class="form-group has-feedback">
-                                    <div class="input-group">
-                                        <div class="input-group-btn">
-                                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i>Recaudar</button>
-                                        </div>
-                                        <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="" placeholder="0" required/>
-                                        <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                    </div>
+                    <div class="panel-middle text-center" id="kingdom-formula">Fórmula</div>
+                    <div class="panel-body text-responsive text-center text-only">
+                        <p>ORO<sub>recaudado</sub> = GRANJAS<sub>jugador</sub> * ORO<sub>granja</sub> * 2</p>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <form id="tax" name="tax" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_kingdom_tax') }}" method="post" role="form">
+                            <div class="form-group has-feedback">
+                                <div class="input-group">
+                                    <div class="input-group-btn">
+                                        <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i>Recaudar</button>
                                     </div>
+                                    <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="" placeholder="0" required/>
+                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 </div>
-                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('tax') }}">
-                            </form>
-                        </div>
+                            </div>
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('tax') }}">
+                        </form>
                     </div>
                 </div>
             </div>
