--- a/src/Archmage/GameBundle/Resources/views/Magic/alchemy.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/alchemy.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-offset-3 col-md-6">
+        <div class="col-xs-12 col-md-offset-3 col-md-6" id="magic-alchemy">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Recetario</div>
                 <div class="panel-body text-responsive">
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-middle text-center">Fórmula</div>
+                <div class="panel-middle text-center" id="alchemy-formula">Fórmula</div>
                 <div class="panel-body text-responsive text-only text-center">
                     <p>ARTEFACTO<sub>A</sub> + ARTEFACTO<sub>B</sub> + ORO = ARTEFACTO<sub>C</sub></p>
                 </div>
@@ -34,7 +34,7 @@
             </div>
         </div>
         {% for recipe in player.recipes %}
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6" id="alchemy-recipe">
             <div class="panel panel-recipe">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-flask"></i><a href="{{ path('archmage_game_home_help') }}#recipe" class="link">Receta de Alquimia</a></div>
                 <div class="panel-body text-responsive">
