--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <div class="col-xs-12 col-md-6 col-md-offset-3" id="magic-artifact">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Defensa Mágica</div>
                 <div class="panel-body text-responsive">
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-middle text-center">Fórmula</div>
+                <div class="panel-middle text-center" id="artifact-formula">Fórmula</div>
                 <div class="panel-body text-responsive text-only text-center">
                     <p>PROB<sub>éxito</sub> = MIN (75, DEFENSA MÁGICA<sub>jugador</sub>)</p>
                 </div>
@@ -34,7 +34,7 @@
             </div>
         </div>
         {% for item in player.items %}
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6" id="artifact-artifact">
             <div class="panel panel-{{ item.artifact.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}" class="link">{{ item.artifact.name }}</a> [{{ item.quantity|nf }}]</div>
                 <div class="panel-body text-responsive">
