--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <div class="col-xs-12 col-md-6 col-md-offset-3" id="magic-conjure">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Defensa Mágica</div>
                 <div class="panel-body text-responsive">
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-middle text-center">Fórmula</div>
+                <div class="panel-middle text-center" id="formula" id="conjure-formula">Fórmula</div>
                 <div class="panel-body text-responsive text-center text-only">
                     <p>PROB<sub>éxito</sub> = MIN (75, DEFENSA MÁGICA<sub>jugador</sub>)</p>
                 </div>
@@ -34,7 +34,7 @@
             </div>
         </div>
         {% for research in player.researchs if research.active %}
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6" id="conjure-research">
             <div class="panel panel-{{ research.spell.faction.class }}">
                 <div class="panel-heading text-center">{% if research.spell.enchantment %}<i class="fa fa-fw fa-link"></i>{% else %}<i class="fa fa-fw fa-magic"></i>{% endif %}<a href="{{ path('archmage_game_home_help') }}#{{ research.spell.name|slug }}" class="link">{{ research.spell.name }}</a></div>
                 <div class="panel-body text-responsive">
