--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -11,7 +11,7 @@
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
-        <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <div class="col-xs-12 col-md-6 col-md-offset-3" id="magic-dispell">
             <div class="panel panel-default">
                 <div class="panel-heading text-center">Defensa Mágica</div>
                 <div class="panel-body text-responsive">
@@ -24,9 +24,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-middle text-center">Fórmula</div>
+                <div class="panel-middle text-center" id="dispell-formula">Fórmula</div>
                 <div class="panel-body text-responsive text-only text-center">
-                    <p>PROB<sub>éxito</sub> = MIN (75, DEFENSA MÁGICA<sub>dueño</sub>)</p>
+                    <p>PROB<sub>éxito</sub> = MIN (75, DEFENSA MÁGICA<sub>jugador</sub>)</p>
                 </div>
                 <div class="panel-footer text-center">
                     <a class="btn btn-default" href="{{ path( 'archmage_game_magic_conjure' ) }}"><i class="fa fa-fw fa-magic"></i>Conjurar</a>
@@ -34,7 +34,7 @@
             </div>
         </div>
         {% for enchantment in player.enchantmentsVictim %}
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6" id="dispell-enchantment">
             <div class="panel panel-{{ enchantment.spell.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-link"></i><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></div>
                 <div class="panel-body text-responsive">
