--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -12,11 +12,7 @@
             </div>
         </div>
         {% for construction in player.constructions %}
-            {% if loop.first %}
-        <div class="col-xs-12 col-md-offset-3 col-md-6">
-            {% else %}
-        <div class="col-xs-12 col-md-6">
-            {% endif %}
+        <div class="col-xs-12 col-md-6 {% if loop.first %}col-md-offset-3{% endif %}" id="build-{{ construction.building.name|slug }}">
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-home"></i><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Edificios que posees actualmente">[{{ construction.quantity|nf }}]</span> {% if not loop.first %}<span data-toggle="tooltip" data-placement="top" title="Edificios construidos por turno">({{ ((player.construction('Talleres').quantity + 1) / construction.building.buildingratio)|round(0, 'ceil') }}/<i class="fa fa-fw fa-hourglass-half"></i>)</span>{% endif %}</div>
                 <div class="panel-body text-responsive">
