--- a/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/demolish.html.twig
@@ -12,11 +12,7 @@
             </div>
         </div>
         {% for construction in player.constructions %}
-            {% if loop.first %}
-        <div class="col-xs-12 col-md-offset-3 col-md-6">
-            {% else %}
-        <div class="col-xs-12 col-md-6">
-            {% endif %}
+        <div class="col-xs-12 col-md-6 {% if loop.first %}col-md-offset-3{% endif %}" {% if loop.first %}id="territory-demolish"{% endif %}>
             <div class="panel panel-default">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-home"></i><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a> [{{ construction.quantity|nf }}]</div>
                 <div class="panel-body text-responsive">
