Cambiado color de los artefactos, mejorando ayuda.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -116,42 +116,42 @@
                 steps: [
                     {
                         element: "#summary-economy",
-                        title: "Título de la ayuda",
-                        content: "Contenido de la ayuda en un par de frases cortas para ver si cabe en el chisme.",
+                        title: "Oro y Personas",
+                        content: "Muchos encantamientos, héroes, unidades y edificios exigen de mantenimiento oro y personas, por lo que es importante mantener un balance positivo.",
                         placement: "top"
                     }, {
                         element: "#summary-magic",
-                        title: "Título de la ayuda",
-                        content: "Contenido de la ayuda en un par de frases cortas para ver si cabe en el chisme.",
+                        title: "Maná y Bonus",
+                        content: "Muchos encantamientos, héroes, unidades y edificios exigen de mantenimiento maná, por lo que es importante mantener un balance positivo.",
                         placement: "top"
                     }, {
                         element: "#summary-territory",
-                        title: "Título de la ayuda",
-                        content: "Contenido de la ayuda en un par de frases cortas para ver si cabe en el chisme.",
+                        title: "Edificios",
+                        content: "Tus construcciones son la base de tu reino. Puedes explorar para conseguir más terrenos donde construir, o atacar al resto de jugadores.",
                         placement: "top"
                     }, {
                         element: "#summary-temple",
-                        title: "Título de la ayuda",
-                        content: "Contenido de la ayuda en un par de frases cortas para ver si cabe en el chisme.",
+                        title: "Dioses y Encantamientos",
+                        content: "Los encantamientos son hechizos que permanecen en tu reino. Los dioses pueden otorgarte su favor y encantarte bendiciones o maldiciones.",
                         placement: "top"
                     }, {
                         element: "#summary-army",
-                        title: "Título de la ayuda",
-                        content: "Contenido de la ayuda en un par de frases cortas para ver si cabe en el chisme.",
+                        title: "Tropas y Mapas",
+                        content: "Cuantas más y mejores tropas tengas, mejor defendido estarás contra ataques enemigos, y más victorias obtendrás al usar mapas.",
                         placement: "top"
                     }, {
                         element: "#summary-tavern",
-                        title: "Título de la ayuda",
-                        content: "Contenido de la ayuda en un par de frases cortas para ver si cabe en el chisme.",
+                        title: "Héroes",
+                        content: "Puedes contratar héroes en la subasta. Cada uno da un bonus diferente, y suben de nivel conforme gastas turnos, pero tienen mantenimientos.",
                         placement: "top"
                     }, {
                         element: "#summary-defense",
-                        title: "Título de la ayuda",
-                        content: "Contenido de la ayuda en un par de frases cortas para ver si cabe en el chisme.",
+                        title: "Defensa Física y Mágica",
+                        content: "Tus defensas evitan ataques enemigos, conjuros, encantamientos y artefactos. Se pueden aumentar con héroes, artefactos, encantamientos y edificios.",
                         placement: "top"
                     }, {
                         element: "#summary-social",
-                        title: "Título de la ayuda",
+                        title: "",
                         content: "Contenido de la ayuda en un par de frases cortas para ver si cabe en el chisme.",
                         placement: "top"
                     }, {
