Arreglado nuevos estilos de artefactos en todos los twigs.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -43,7 +43,7 @@
                                 <li><span class="label label-legendary">Anillo Invocador</span>, +10% producción de <span class="label label-extra">Tropas</span> en tu Reino.</li>
                             </ul>
                         </li>
-                        <li>Ahora los <span class="label label-extra">Artefactos</span> en defensa solo duran una batalla, el mago deberá volver a colocarlo en defensa si así lo desea.</li>
+                        <li>Ahora los <span class="label label-artifact">Artefactos</span> en defensa solo duran una batalla, el mago deberá volver a colocarlo en defensa si así lo desea.</li>
                         <li>Se ha añadido el sistema de <span class="label label-recipe">Alquimia</span> al juego. Un jugador puede usar <span class="label label-recipe">Recetas</span> para convertir unos Artefactos en otros. Pueden conseguirse en la Subasta, y sólo se gastan si otorgan <span class="label label-legendary">Artefactos</span> legendarios. De lo contrario, son reutilizables.</li>
                         <li>Se ha añadido el sistema de <span class="label label-quest">Aventuras</span> al juego. Un jugador puede tratar de usar <span class="label label-quest">Mapas</span> para derrotar ejércitos que merodean por el Reino y obtener interesantes recompensas. Pueden conseguirse en la Subasta, y son de un sólo uso, ganes o pierdas. Hay varios tipos de dificultad, y las recompensas pueden varíar, y dar <span class="label label-rune">Runas</span> o <span class="label label-legendary">Artefactos</span> legendarios.</li>
                         <li>Se ha introducido en el juego las <span class="label label-rune">Runas</span>, una moneda de cambio empleada en el nuevo <span class="label label-rune">Mercado</span>, una versión de la futura tienda con dinero interno del juego. Se pueden obtener completando mapas y en ocasiones especiales.</li>
@@ -84,8 +84,8 @@
                         </li>
                         <li>Ahora los <span class="label label-extra">Barracones</span> ya no permiten reclutar más deprisa, sino que aumentan la cantidad de <span class="label label-extra">Tropas</span> invocadas.</li>
                         <li>Ahora si tus <span class="label label-extra">Barreras</span> o <span class="label label-extra">Fortalezas</span> detienen un conjuro o ataque, algunas se verán destruidas en el proceso para simbolizar un desgaste, que se convertirán en tierras libres.</li>
-                        <li>Ahora solo se subastará una unidad de <span class="label label-extra">Artefacto</span> cada vez.</li>
-                        <li>Ahora los <span class="label label-extra">Artefactos</span> otorgan poder, y los <span class="label label-legendary">Artefactos</span> legendarios mucho más poder que los demás.</li>
+                        <li>Ahora solo se subastará una unidad de <span class="label label-artifact">Artefacto</span> cada vez.</li>
+                        <li>Ahora los <span class="label label-artifact">Artefactos</span> otorgan poder, y los <span class="label label-legendary">Artefactos</span> legendarios mucho más poder que los demás.</li>
                         <li>Se ha reducido el cap de poder superior al atacar del 80% al 60%.</li>
                         <li>Se ha duplicado el coste de mantenimiento de las <span class="label label-extra">Barreras</span> y <span class="label label-extra">Fortalezas</span>.</li>
                         <li>Se han ajustado muchos valores de salida de precios en la subasta, dependiendo de la rareza.</li>
