Eliminadas las runas. Ahora en el market se pueden comprar directamente artefactos. Eliminadas las fixtues de las runas, y las skillsfixtures de las runas. Ahora los artefactos tienen costes de runas. Cambiado el color de los artefatos grises por el de las runas aguamarinas. Cambiadomarket, help, patch y summary para representar dichos cambios. Cambiado funcionamiento de los objetos de invocacion para que la cantidad de tropas sea ligeramente aleatoria. Abaratado el coste de los mapas para hacerlos mas atractivos, pero reducida la recompensa de oro en consecuencia. Ahora el cofre de oro parte de 1 oro hasta 20M.

--- a/src/Archmage/GameBundle/Resources/views/Army/quest.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/quest.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/quest.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar 5 <span class="label label-extra">Turnos</span> y un <span class="label label-quest">Mapa</span> para mandar a tus tropas a la batalla en busca de <span class="label label-extra">Oro</span> y <span class="label label-rune">Runas</span>. En algunos casos incluso existe la probabilidad de encontrar un <span class="label label-legendary">Artefacto</span> legendario.</div>
+                            <div class="col-xs-12">Aquí puedes gastar 5 <span class="label label-extra">Turnos</span> y un <span class="label label-quest">Mapa</span> para mandar a tus tropas a la batalla en busca de <span class="label label-extra">Oro</span> y <span class="label label-artifact">Runas</span>. En algunos casos incluso existe la probabilidad de encontrar un <span class="label label-legendary">Artefacto</span> legendario.</div>
                         </div>
                     </div>
                 </div>
