--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -45,8 +45,8 @@
                         </li>
                         <li>Ahora los <span class="label label-artifact">Artefactos</span> en defensa solo duran una batalla, el mago deberá volver a colocarlo en defensa si así lo desea.</li>
                         <li>Se ha añadido el sistema de <span class="label label-recipe">Alquimia</span> al juego. Un jugador puede usar <span class="label label-recipe">Recetas</span> para convertir unos Artefactos en otros. Pueden conseguirse en la Subasta, y sólo se gastan si otorgan <span class="label label-legendary">Artefactos</span> legendarios. De lo contrario, son reutilizables.</li>
-                        <li>Se ha añadido el sistema de <span class="label label-quest">Aventuras</span> al juego. Un jugador puede tratar de usar <span class="label label-quest">Mapas</span> para derrotar ejércitos que merodean por el Reino y obtener interesantes recompensas. Pueden conseguirse en la Subasta, y son de un sólo uso, ganes o pierdas. Hay varios tipos de dificultad, y las recompensas pueden varíar, y dar <span class="label label-rune">Runas</span> o <span class="label label-legendary">Artefactos</span> legendarios.</li>
-                        <li>Se ha introducido en el juego las <span class="label label-rune">Runas</span>, una moneda de cambio empleada en el nuevo <span class="label label-rune">Mercado</span>, una versión de la futura tienda con dinero interno del juego. Se pueden obtener completando mapas y en ocasiones especiales.</li>
+                        <li>Se ha añadido el sistema de <span class="label label-quest">Aventuras</span> al juego. Un jugador puede tratar de usar <span class="label label-quest">Mapas</span> para derrotar ejércitos que merodean por el Reino y obtener interesantes recompensas. Pueden conseguirse en la Subasta, y son de un sólo uso, ganes o pierdas. Hay varios tipos de dificultad, y las recompensas pueden varíar, y dar <span class="label label-artifact">Runas</span> o <span class="label label-legendary">Artefactos</span> legendarios.</li>
+                        <li>Se ha introducido en el juego las <span class="label label-artifact">Runas</span>, una moneda de cambio empleada en el nuevo <span class="label label-artifact">Mercado</span>, una versión de la futura tienda con dinero interno del juego. Se pueden obtener completando mapas y en ocasiones especiales.</li>
                         <li>Se han añadido o modificado los siguientes Artefactos:
                             <ul>
                                 <li><span class="label label-extra">Poción de Fuerza</span>, +30% <span class="label label-extra">Ataque</span> a tus tropas.</li>
@@ -95,6 +95,7 @@
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Encantamientos</span>.</li>
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Hechizos</span>.</li>
                         <li>Se ha añadido una segunda condición de victoria, la <span class="label label-extra">Ira de los Dioses</span> consulta la ayuda para entender cómo funciona.</li>
+                        <li>Ahora hay bots!</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta cerrada</div>
